// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/kanban/calculations/KanbanCalculationOptions base case 1`] = `
<div>
  <div
    class="CalculationOptions css-2b097c-container"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    >
      <span
        id="aria-selection"
      />
      <span
        id="aria-context"
      >
          Select is focused , press Down to open the menu, 
      </span>
    </span>
    <div
      class="CalculationOptions__control CalculationOptions__control--is-focused css-1s59geg-Control"
    >
      <div
        class="CalculationOptions__value-container CalculationOptions__value-container--has-value css-1mxrbau-ValueContainer"
      >
        <div
          class="CalculationOptions__single-value css-1brck82-singleValue"
        >
          Count
        </div>
        <input
          aria-autocomplete="list"
          class="css-wmatm6-dummyInput-DummyInput"
          id="react-select-2-input"
          readonly=""
          tabindex="0"
          value=""
        />
      </div>
      <div
        class="CalculationOptions__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class="CalculationOptions__indicator CalculationOptions__clear-indicator css-13eygzs-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          class="CalculationOptions__indicator-separator css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class="CalculationOptions__indicator CalculationOptions__dropdown-indicator css-1f9iddu-indicatorContainer"
        >
          <i
            class="CompassIcon icon-chevron-up ChevronUpIcon"
          />
        </div>
      </div>
    </div>
    <input
      name="calculation_options"
      type="hidden"
      value="count"
    />
  </div>
</div>
`;

exports[`components/kanban/calculations/KanbanCalculationOptions with menu open 1`] = `
<div>
  <div
    class="CalculationOptions css-2b097c-container"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    >
      <span
        id="aria-selection"
      />
      <span
        id="aria-context"
      >
         7 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <div
      class="CalculationOptions__control CalculationOptions__control--is-focused CalculationOptions__control--menu-is-open css-1s59geg-Control"
    >
      <div
        class="CalculationOptions__value-container CalculationOptions__value-container--has-value css-1mxrbau-ValueContainer"
      >
        <div
          class="CalculationOptions__single-value css-1brck82-singleValue"
        >
          Count
        </div>
        <input
          aria-autocomplete="list"
          class="css-wmatm6-dummyInput-DummyInput"
          id="react-select-3-input"
          readonly=""
          tabindex="0"
          value=""
        />
      </div>
      <div
        class="CalculationOptions__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class="CalculationOptions__indicator CalculationOptions__clear-indicator css-13eygzs-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          class="CalculationOptions__indicator-separator css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class="CalculationOptions__indicator CalculationOptions__dropdown-indicator css-1f9iddu-indicatorContainer"
        >
          <i
            class="CompassIcon icon-chevron-up ChevronUpIcon"
          />
        </div>
      </div>
    </div>
    <div
      class="CalculationOptions__menu css-1rsmi4x-menu"
    >
      <div
        class="CalculationOptions__menu-list css-g29tl0-MenuList"
      >
        <div
          class="KanbanCalculationOptions_CustomOption active"
        >
          <span>
            Count
             
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Count Empty
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Count Not Empty
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Percent Empty
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Percent Not Empty
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Count Value
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Count Unique Values
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
        </div>
      </div>
    </div>
    <input
      name="calculation_options"
      type="hidden"
      value="count"
    />
  </div>
</div>
`;

exports[`components/kanban/calculations/KanbanCalculationOptions with submenu open 1`] = `
<div>
  <div
    class="CalculationOptions css-2b097c-container"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    >
      <span
        id="aria-selection"
      />
      <span
        id="aria-context"
      >
         7 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <div
      class="CalculationOptions__control CalculationOptions__control--is-focused CalculationOptions__control--menu-is-open css-1s59geg-Control"
    >
      <div
        class="CalculationOptions__value-container CalculationOptions__value-container--has-value css-1mxrbau-ValueContainer"
      >
        <div
          class="CalculationOptions__single-value css-1brck82-singleValue"
        >
          Count
        </div>
        <input
          aria-autocomplete="list"
          class="css-wmatm6-dummyInput-DummyInput"
          id="react-select-4-input"
          readonly=""
          tabindex="0"
          value=""
        />
      </div>
      <div
        class="CalculationOptions__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class="CalculationOptions__indicator CalculationOptions__clear-indicator css-13eygzs-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          class="CalculationOptions__indicator-separator css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class="CalculationOptions__indicator CalculationOptions__dropdown-indicator css-1f9iddu-indicatorContainer"
        >
          <i
            class="CompassIcon icon-chevron-up ChevronUpIcon"
          />
        </div>
      </div>
    </div>
    <div
      class="CalculationOptions__menu css-1rsmi4x-menu"
    >
      <div
        class="CalculationOptions__menu-list css-g29tl0-MenuList"
      >
        <div
          class="KanbanCalculationOptions_CustomOption active"
        >
          <span>
            Count
             
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Count Empty
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Count Not Empty
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Percent Empty
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Percent Not Empty
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Count Value
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
        </div>
        <div
          class="KanbanCalculationOptions_CustomOption "
        >
          <span>
            Count Unique Values
             
            <i
              class="CompassIcon icon-chevron-right ChevronRightIcon"
            />
          </span>
          <div
            class="dropdown-submenu"
          >
            <div
              class="drops "
            >
              <span>
                Status
              </span>
            </div>
            <div
              class="drops active"
            >
              <span>
                Property 1
              </span>
            </div>
            <div
              class="drops "
            >
              <span>
                Property 2
              </span>
            </div>
            <div
              class="drops "
            >
              <span>
                Property 3
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <input
      name="calculation_options"
      type="hidden"
      value="count"
    />
  </div>
</div>
`;
